--- a/chat-impl/impl/src/bundle/chat_pt_PT.properties
+++ b/chat-impl/impl/src/bundle/chat_pt_PT.properties
@@ -1,5 +1,5 @@
-#Stored by I18NEdit, may be edited!
-chat_body=Corpo da mensagem
+#Fri Nov 26 20:36:01 CET 2010
 chat_from=De 
-chat_header=Cabe\u00E7alho\n
+chat_body=Corpo da mensagem
 chat_message=Mensagem  
+chat_header=Cabe\u00E7alho\n
