--- a/chat-tool/tool/src/bundle/permissions_es.properties
+++ b/chat-tool/tool/src/bundle/permissions_es.properties
@@ -1,7 +1,7 @@
 #Fri Nov 26 20:32:18 CET 2010
 desc-chat.new.channel=Crear una nueva sala en el chat
 desc-chat.new=Publicar mensajes del chat
-desc-chat.delete.own=Borrar mensajes propios del char
+desc-chat.delete.own=Borrar mensajes propios del chat
 desc-chat.read=Leer mensajes del chat
 desc-chat.delete.channel=Borrar un sala del chat
 desc-chat.delete.any=Borrar cualquier mensaje del chat
