--- a/chat-tool/tool/src/bundle/chat_fr_FR.properties
+++ b/chat-tool/tool/src/bundle/chat_fr_FR.properties
@@ -1,125 +1,151 @@
-#Fri Nov 26 20:33:35 CET 2010
-hidet=Cacher heure
-custom.called=nomm\u00E9
-custom.which=Quel salon de chat sera affich\u00E9 ?
-bar.onlydate=Date seulement
-add_room=Ajouter salon
-shownone=Pas d'affichage d'historique
-custom.howmany=Combien de messages seront affich\u00E9s ?
-gen.from=De\:
-lay_note=Tous les messages sont archiv\u00E9s et peuvent \u00EAtre lus par tous les membres du site.
-control_panel=Contr\u00F4le
-hided=Cacher date
+# Copyright (C) 2009-2012 The Sakai Foundation
+#
+# Licensed under the Educational Community License, Version 2.0 (the "License"); 
+# you may not use this file except in compliance with the License. 
+# You may obtain a copy of the License at 
+# 
+# http://www.opensource.org/licenses/ecl2.php 
+# 
+# Unless required by applicable law or agreed to in writing, software 
+# distributed under the License is distributed on an "AS IS" BASIS, 
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+# See the License for the specific language governing permissions and 
+# limitations under the License.
+# 
+# Contact:
+# Jean-Fran\u00E7ois L\u00E9v\u00EAque (Universit\u00E9 Pierre et Marie Curie, jean-francois.leveque@upmc.fr)
+# 
+# Translators:
+# Universit\u00E9 du Littoral C\u00F4te d'Opale
+# Universit\u00E9 Pierre et Marie Curie
+#
+# Validation:
+# Universit\u00E9 du Littoral C\u00F4te d'Opale
+# Universit\u00E9 Pierre et Marie Curie
+
+hidet=Cacher l'heure
+custom.called=nomm\u00e9
+custom.which=Quel salon sera affich\u00e9 ?
+bar.onlydate=Date uniquement
+add_room=Ajouter un salon
+shownone=Pas d'historique
+custom.howmany=Combien de messages seront affich\u00e9s ?
+gen.from=De :
+lay_note=Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
+control_panel=Contr\u00f4le
+hided=Cacher la date
 number_messages=Nombre de messages
-add_channel_title=Ajouter salon
-control.clear=R\u00E9initialiser
+add_channel_title=Ajouter un salon
+control.clear=Effacer
 back_to_room=Retour au salon
 tool_options_title=Options des outils
-lay_restricted_note_none=Seulement des messages de la session courante peuvent \u00EAtre lus par des participants du site.
-delete.wrong=Le message a d\u00E9j\u00E0 \u00E9t\u00E9  supprim\u00E9 \!
+lay_restricted_note_none=Seuls les messages de la session actuelle peuvent \u00eatre lus par des participants de l'espace.
+delete.wrong=Le message a d\u00e9j\u00e0 \u00e9t\u00e9 supprim\u00e9 !
 monitor_panel=Liste
-title_required=Titre requis
+title_required=Titre obligatoire
 custom.showall=Afficher tous les messages
-gen.alert=Alerte \:
-channel_description_colon=Description \:
-recent_chat_heading=Affichage du chat r\u00E9cent
-thereispro=Les droits d'acc\u00E8s ne peuvent \u00EAtre r\u00E9gl\u00E9s actuellement parce que le site est d\u00E9j\u00E0 en train d'\u00EAtre \u00E9dit\u00E9. Fermez les droits d'acc\u00E8s dans les autres outils avant de continuer.
+gen.alert=Alerte :
+channel_description_colon=Description :
+recent_chat_heading=Affichage des chats r\u00e9cents
+thereispro=Les droits d'acc\u00e8s ne peuvent \u00eatre modifi\u00e9s actuellement car il est en cours d'\u00e9dition. Fermez les droits d'acc\u00e8s dans les autres outils avant de continuer.
 change_room=Changer de salon
 past_x_messages=Derniers {0} messages
-thischat=Ce clavardage n'est pas disponible.
-custom.use3=Utiliser un nouveau salon de chat
+thischat=Ce chat n'est pas disponible.
+custom.use3=Cr\u00e9er un nouveau salon
 bar.view=Vue
-custom.use2=Utiliser le salon de chat appel\u00E9
-custom.use1=Utiliser le salon de chat principal de ce site
-number_days=Nombre de jours en arri\u00E8re
+custom.use2=Entrer dans le salon
+custom.use1=Entrer dans le salon principal de cet espace
+number_days=Nombre de jours dans le pass\u00e9
 message_display=Affichage du message
-delete_room_messages=Netoyer l'historique
+delete_room_messages=Nettoyer l'historique
 custom.cuschat=Options de chat
 bar.nodatetime=Ni la date ni l'heure
-lay.note=Tous les messages de clavardage sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
+lay.note=Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
 neitherDateOrTime=Ni la date ni l'heure
-select_room_title=S\u00E9lectionnez un salon
+select_room_title=S\u00e9lectionnez un salon
 room_list_title=Administrer les salons
-bar.onlytime=Heure seulement
+bar.onlytime=Heure uniquement
 days=Jours
-delete_room_messages_confirm_title=Suppression de tous les messages du salon du chat
-delete.sure=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente ce message ?
-permis=Droits d'acc\u00E8s
-turnoff=D\u00E9sactiver l'alerte de nouveau message
-youent=Vous \u00EAtes entr\u00E9
+delete_room_messages_confirm_title=Suppression de tous les messages du salon
+delete.sure=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce message ?
+permis=Permissions
+turnoff=D\u00e9sactiver l'alerte de nouveau message
+youent=Vous \u00eates entr\u00e9
 on=le
-delete_room_messages_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente tous les messages de ce salon de chat ?
-channel_creation_date=Date de cr\u00E9ation
-uniqueid=Seule ID
-gen.edit=Editer
-combox.viewfrom=Aper\u00E7u de message de...
-edit_channel_title=Editer Salon
+delete_room_messages_confirm_alert=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement tous les messages de ce salon ?
+channel_creation_date=Date de cr\u00e9ation
+uniqueid=Identifiant uniquement
+gen.edit=Modifier
+combox.viewfrom=Aper\u00e7u des messages de...
+edit_channel_title=\u00c9diter le salon
 bar.allmes=Tous les messages
 messages=Messages
 synoptic_options_title=Options synoptiques
 lay_user=Utilisateurs dans le salon
 bar.datetime=Date et heure
-desc_too_long=Description doit \u00EAtre de moins que {0} de caract\u00E8res
-lay_restricted_note_days=Seulement les messages des derniers {0} jours  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant d'emplacement.
-update_text=Actualiser
-message_owner=Propri\u00E9taire
-showlast=Afficher dernier
+desc_too_long=La description doit comporter moins de {0} de caract\u00e8res
+lay_restricted_note_days=Seuls les messages des derniers {0} jours sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
+update_text=Mise \u00e0 jour
+message_owner=Propri\u00e9taire
+showlast=Afficher le dernier
 manage_tool=Options
-chatmesdel=Message de chat supprim\u00E9 par
+chatmesdel=Message de chat supprim\u00e9 par
 allMessages=Tous les messages
-custom.msgdisp=Affichage message
+custom.msgdisp=Affichage du message
 bar.show=Afficher
-channel_description=Description
-control.lab=Entrer le message de chat
-forchat=pour le nom de salon de clavardage. Nom du salon du chat
-number_chars=Nombre de caract\u00E8res par message
-showt=Afficher heure
-set_as_default=Etablir "{0}" par d\u00E9faut
-perm_description=Etablir les permissions pour {0} dans le site "{1}"
-showpast=Pass\u00E9s
+channel_description=Description :
+control.lab=Saisir un message
+forchat=pour le nom du salon. Nom du salon
+number_chars=Nombre de caract\u00e8res par message
+showt=Afficher l'heure
+set_as_default=D\u00e9finir "{0}" par d\u00e9faut
+perm_description=D\u00e9finir les permissions pour {0} dans l'espace "{1}"
+showpast=Pass\u00e9s
 viewingChatRoomText=Affichage des messages pour "{0}"
-youdonot4=Vous n'avez pas le droit de supprimer ce message du chat.
-showtoday=Afficher les messages d'aujourd'hui
-youdonot3=Vous n'avez pas le droit de publier dans ce chat.
-youdonot2=Vous n'avez pas le droit de cr\u00E9er ce chat.
-youdonot1=Vous n'avez pas le droit de voir ce chat.
+youdonot4=Vous n'avez pas le droit de supprimer ce message.
+showtoday=Afficher les messages du jour
+youdonot3=Vous n'avez pas le droit de publier dans ce salon.
+youdonot2=Vous n'avez pas le droit de cr\u00e9er ce salon.
+youdonot1=Vous n'avez pas le droit de consulter ce salon.
 timeAndDate=Date et heure
 custom.showlast=Afficher les derniers
-setpermis=R\u00E9gler les droits d'acc\u00E8s pour le salon de chat dans le site
-channel_enable_override_description=Permettre aux participants du chat, de changer les propri\u00E9t\u00E9s d'affichage de leur propre fen\u00EAtre de chat\n
-showd=Afficher date
-channel_title_colon=Titre \:
-delete.delete=Supprimer le message de chat
-lay.user=Utilisateurs du chat
+setpermis=D\u00e9finir les droits d'acc\u00e8s pour le salon dans l'espace
+channel_enable_override_description=Permettre aux participants du chat de modifier les propri\u00e9t\u00e9s d'affichage de leur propre fen\u00eatre
+showd=Afficher la date
+channel_title_colon=Titre :
+delete.delete=Supprimer le message
+lay.user=Utilisateurs dans le salon
 delete_room_confirm_title=Suppression du salon
 past_x_days={0} derniers jours
-bar.listnavselect=Liste des options \: appuyer sur alt + fl\u00E8ches haut et bas pour faire d\u00E9filer le menu
-control.post=Ajouter message
+bar.listnavselect=Liste des options : appuyer sur alt + fl\u00e8ches haut et bas pour faire d\u00e9filer le menu
+control.post=Ajouter un message
 channel_title=Titre
-timeOnly=Heure seulement
-lay_restricted_note_messages=Seulement les derniers  {0} messages  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
-view=Voir
+timeOnly=Heure uniquement
+lay_restricted_note_messages=Seuls les derniers {0} messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
+view=Vue
 gen.delete=Supprimer
-gen.date=Date \:
-custom.showpast=Afficher les messages pass\u00E9s
-validation_error=Il y avait une erreur soumettant cette forme.  Voir les messages sp\u00E9cifiques ci-dessous.
+gen.date=Date :
+custom.showpast=Afficher les messages pass\u00e9s
+validation_error=Une erreur est survenue lors de l'envoi du formulaire. Voir ci-dessous.
 showall=Tous les messages
 custom.days=jours
-delete_room_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer d\u00E9finitivement ce salon de chat?
-chatroom=Salon de chat \:
+delete_room_confirm_alert=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce salon ?
+chatroom=Salon :
 list.del=Supprimer ce message
-gen.save=Mettre \u00E0 jour les options
-default_new_channel_title=Salon principal de chat
-presence_panel=Pr\u00E9sence
-title_too_long=Titre doit comporter moins que {0}  caract\u00E8res
+gen.save=Mettre \u00e0 jour les options
+default_new_channel_title=Salon principal
+presence_panel=Liste des personnes pr\u00e9sentes
+title_too_long=Le titre doit comporter moins de {0} caract\u00e8res
 gen.cancel=Annuler
-neg_num_error=Les nombres n\u00E9gatifs ne sont pas admis
+neg_num_error=Les nombres n\u00e9gatifs sont interdits
 custom.mess=messages
-dateOnly=Date seulement
-perm_error=Privil\u00E8ges insuffisants pour {0}
-enter_the_chat_room=Entrer ''{0}'' Salon
-set_default=Etablir par d\u00E9faut
-therewaspro=Un probl\u00E8me est survenu lors de l'envoi du message pr\u00E9c\u00E9dent.
+dateOnly=Date uniquement
+perm_error=Droits insuffisants pour {0}
+enter_the_chat_room=Entrer dans le salon ''{0}''
+set_default=D\u00e9finir par d\u00e9faut
+therewaspro=Un probl\u00e8me est survenu lors de l'envoi du message pr\u00e9c\u00e9dent.
 turnon=Activer l'alerte de nouveau message
-gen.mess=Message \:
-custom.chatroom=Salon de chat
+gen.mess=Message :
+custom.chatroom=Salon
+gen.view=Voir le journal
+messages_shown_total=Affichage de {0} messages sur {1}
