--- a/chat-tool/tool/src/bundle/chat_fr_FR.properties
+++ b/chat-tool/tool/src/bundle/chat_fr_FR.properties
@@ -23,129 +23,189 @@
 # Universit\u00E9 du Littoral C\u00F4te d'Opale
 # Universit\u00E9 Pierre et Marie Curie
 
-hidet=Cacher l'heure
-custom.called=nomm\u00e9
-custom.which=Quel salon sera affich\u00e9 ?
-bar.onlydate=Date uniquement
-add_room=Ajouter un salon
-shownone=Pas d'historique
-custom.howmany=Combien de messages seront affich\u00e9s ?
-gen.from=De :
-lay_note=Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
-control_panel=Contr\u00f4le
-hided=Cacher la date
-number_messages=Nombre de messages
-add_channel_title=Ajouter un salon
-control.clear=Effacer
-back_to_room=Retour au salon
-tool_options_title=Options des outils
-lay_restricted_note_none=Seuls les messages de la session actuelle peuvent \u00eatre lus par des participants de l'espace.
-delete.wrong=Le message a d\u00e9j\u00e0 \u00e9t\u00e9 supprim\u00e9 !
-monitor_panel=Liste
-title_required=Titre obligatoire
-custom.showall=Afficher tous les messages
-gen.alert=Alerte :
-channel_description_colon=Description :
-recent_chat_heading=Affichage des chats r\u00e9cents
-thereispro=Les droits d'acc\u00e8s ne peuvent \u00eatre modifi\u00e9s actuellement car il est en cours d'\u00e9dition. Fermez les droits d'acc\u00e8s dans les autres outils avant de continuer.
-change_room=Changer de salon
-past_x_messages=Derniers {0} messages
-thischat=Ce chat n'est pas disponible.
-custom.use3=Cr\u00e9er un nouveau salon
-bar.view=Vue
-custom.use2=Entrer dans le salon
-custom.use1=Entrer dans le salon principal de cet espace
-number_days=Nombre de jours dans le pass\u00e9
-message_display=Affichage du message
-delete_room_messages=Nettoyer l'historique
-custom.cuschat=Options de chat
-bar.nodatetime=Ni la date ni l'heure
-lay.note=Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
-neitherDateOrTime=Ni la date ni l'heure
-select_room_title=S\u00e9lectionnez un salon
-room_list_title=Administrer les salons
-bar.onlytime=Heure uniquement
-days=Jours
-delete_room_messages_confirm_title=Suppression de tous les messages du salon
-delete.sure=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce message ?
-permis=Permissions
-turnoff=D\u00e9sactiver l'alerte de nouveau message
-youent=Vous \u00eates entr\u00e9
-on=le
-delete_room_messages_confirm_alert=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement tous les messages de ce salon ?
-channel_creation_date=Date de cr\u00e9ation
-uniqueid=Identifiant uniquement
-gen.edit=Modifier
-combox.viewfrom=Aper\u00e7u des messages de...
-edit_channel_title=\u00c9diter le salon
-bar.allmes=Tous les messages
-messages=Messages
-synoptic_options_title=Options synoptiques
-lay_user=Utilisateurs dans le salon
-bar.datetime=Date et heure
-desc_too_long=La description doit comporter moins de {0} de caract\u00e8res
-lay_restricted_note_days=Seuls les messages des derniers {0} jours sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
-update_text=Mise \u00e0 jour
-message_owner=Propri\u00e9taire
-showlast=Afficher le dernier
-manage_tool=Options
-chatmesdel=Message de chat supprim\u00e9 par
-allMessages=Tous les messages
-custom.msgdisp=Affichage du message
-bar.show=Afficher
-channel_description=Description :
-control.lab=Saisir un message
-forchat=pour le nom du salon. Nom du salon
-number_chars=Nombre de caract\u00e8res par message
-showt=Afficher l'heure
-set_as_default=D\u00e9finir "{0}" par d\u00e9faut
+#Java code
+
+thischat= Ce chat n'est pas disponible.
+chatmesdel= Message de chat supprim\u00e9 par
+chatroom= Salon :
+days= Jours
+forchat= pour le nom du salon. Nom du salon
+hided= Cacher la date
+hidet= Cacher l'heure
+messages= Messages 
+on= le
+permis= Droits d'acc\u00e8s 
+setpermis= D\u00e9finir les droits d'acc\u00e8s pour le salon dans l'espace 
 perm_description=D\u00e9finir les permissions pour {0} dans l'espace "{1}"
-showpast=Pass\u00e9s
-viewingChatRoomText=Affichage des messages pour "{0}"
-youdonot4=Vous n'avez pas le droit de supprimer ce message.
-showtoday=Afficher les messages du jour
-youdonot3=Vous n'avez pas le droit de publier dans ce salon.
-youdonot2=Vous n'avez pas le droit de cr\u00e9er ce salon.
-youdonot1=Vous n'avez pas le droit de consulter ce salon.
-timeAndDate=Date et heure
-custom.showlast=Afficher les derniers
-setpermis=D\u00e9finir les droits d'acc\u00e8s pour le salon dans l'espace
-channel_enable_override_description=Permettre aux participants du chat de modifier les propri\u00e9t\u00e9s d'affichage de leur propre fen\u00eatre
-showd=Afficher la date
-channel_title_colon=Titre :
-delete.delete=Supprimer le message
-lay.user=Utilisateurs dans le salon
-delete_room_confirm_title=Suppression du salon
+showall= Tous les messages
+shownone=Pas d'historique
+showd= Afficher la date
+showlast= Afficher le dernier
+showpast= Pass\u00e9s
+showt= Afficher l'heure
+showtoday= Afficher les messages du jour
+thereispro= Les droits d'acc\u00e8s ne peuvent \u00eatre modifi\u00e9s actuellement car il est en cours d'\u00e9dition. Fermez les droits d'acc\u00e8s dans les autres outils avant de continuer.
+therewaspro= Un probl\u00e8me est survenu lors de l'envoi du message pr\u00e9c\u00e9dent.
+turnoff= D\u00e9sactiver l'alerte de nouveau message
+turnon= Activer l'alerte de nouveau message
+youdonot1= Vous n'avez pas le droit de consulter ce salon.
+youdonot2= Vous n'avez pas le droit de cr\u00e9er ce salon.
+youdonot3= Vous n'avez pas le droit de publier dans ce salon.
+youdonot4= Vous n'avez pas le droit de supprimer ce message.
+youent= Vous \u00eates entr\u00e9
+
+
+#General Vm
+
+gen.alert= Alerte :
+gen.cancel= Annuler
+gen.date= Date :
+gen.delete= Supprimer
+gen.edit= Modifier
+gen.view= Voir le journal
+gen.from= De :
+gen.mess= Message :
+gen.save= Mettre \u00e0 jour les options
+
+
+#Control Vm
+
+control.clear= Effacer
+control.post= Ajouter un message
+control.lab=Saisir un message
+combox.viewfrom= Aper\u00e7u des messages de...
+
+
+#Customize Vm
+
+custom.chatroom= Salon
+custom.cuschat= Options de chat
+custom.days= jours
+custom.howmany= Combien de messages seront affich\u00e9s ?
+custom.mess= messages 
+custom.showall= Afficher tous les messages
+custom.showlast= Afficher les derniers
+custom.showpast= Afficher les messages pass\u00e9s
+custom.use1= Entrer dans le salon principal de cet espace
+custom.use2= Entrer dans le salon
+custom.use3= Cr\u00e9er un nouveau salon
+custom.which= Quel salon sera affich\u00e9 ?
+custom.called= nomm\u00e9
+custom.msgdisp= Affichage du message
+
+
+#Delete Vm
+
+delete.delete= Supprimer le message
+delete.sure= \u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce message ?
+delete.wrong= Le message a d\u00e9j\u00e0 \u00e9t\u00e9 supprim\u00e9 !
+
+
+#Layaut Vm
+
+lay.note= Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
+lay.user= Utilisateurs dans le salon
+
+
+#List Vm
+
+list.del= Supprimer ce message
+
+#Toolbar Vm (also used in Java)
+bar.onlytime= Heure uniquement
+bar.datetime= Date et heure
+bar.onlydate= Date uniquement
+bar.nodatetime= Ni la date ni l'heure
+bar.allmes= Tous les messages
+bar.view=Vue
+bar.show=Afficher
+bar.listnavselect= Liste des options : appuyer sur alt + fl\u00e8ches haut et bas pour faire d\u00e9filer le menu
+
+
+
+
+
+
+
+
+# ###############################
+# all the new strings
+
 past_x_days={0} derniers jours
-bar.listnavselect=Liste des options : appuyer sur alt + fl\u00e8ches haut et bas pour faire d\u00e9filer le menu
-control.post=Ajouter un message
-channel_title=Titre
-timeOnly=Heure uniquement
-lay_restricted_note_messages=Seuls les derniers {0} messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
-view=Vue
-gen.delete=Supprimer
-gen.date=Date :
-custom.showpast=Afficher les messages pass\u00e9s
-validation_error=Une erreur est survenue lors de l'envoi du formulaire. Voir ci-dessous.
-showall=Tous les messages
-custom.days=jours
-delete_room_confirm_alert=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce salon ?
-chatroom=Salon :
-list.del=Supprimer ce message
-gen.save=Mettre \u00e0 jour les options
+past_x_messages=Derniers {0} messages
+
 default_new_channel_title=Salon principal
-presence_panel=Liste des personnes pr\u00e9sentes
-title_too_long=Le titre doit comporter moins de {0} caract\u00e8res
-gen.cancel=Annuler
-neg_num_error=Les nombres n\u00e9gatifs sont interdits
-custom.mess=messages
+allMessages=Tous les messages
+timeOnly=Heure uniquement
+timeAndDate=Date et heure
 dateOnly=Date uniquement
-perm_error=Droits insuffisants pour {0}
+neitherDateOrTime=Ni la date ni l'heure
+uniqueid=Identifiant uniquement
+manage_tool=Options 
+lay_note=Tous les messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant de l'espace.
+lay_restricted_note_days=Seuls les messages des derniers {0} jours sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
+lay_restricted_note_messages=Seuls les derniers {0} messages sont archiv\u00e9s et peuvent \u00eatre lus par n'importe quel participant.
+lay_restricted_note_none=Seuls les messages de la session actuelle peuvent \u00eatre lus par des participants de l'espace.
+lay_user=Utilisateurs dans le salon
+view=Vue
+
+add_room=Ajouter un salon
+change_room=Changer de salon
 enter_the_chat_room=Entrer dans le salon ''{0}''
-set_default=D\u00e9finir par d\u00e9faut
-therewaspro=Un probl\u00e8me est survenu lors de l'envoi du message pr\u00e9c\u00e9dent.
-turnon=Activer l'alerte de nouveau message
-gen.mess=Message :
-custom.chatroom=Salon
-gen.view=Voir le journal
+channel_creation_date=Date de cr\u00e9ation
+channel_description=Description 
+channel_description_colon=Description :
+channel_title=Titre
+channel_title_colon=Titre :
+
+edit_channel_title=\u00c9diter le salon
+add_channel_title=Ajouter un salon
+
+message_display=Affichage du message
+
 messages_shown_total=Affichage de {0} messages sur {1}
+
+perm_error=Droits insuffisants pour {0}
+
+message_owner=Propri\u00e9taire
+
+select_room_title=S\u00e9lectionnez un salon
+
+tool_options_title=Options des outils
+synoptic_options_title=Options synoptiques
+room_list_title=Administrer les salons
+
+monitor_panel=Liste
+presence_panel=Liste des personnes pr\u00e9sentes
+control_panel=Contr\u00f4le
+
+delete_room_confirm_title= Suppression du salon
+delete_room_confirm_alert= \u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement ce salon ?
+
+delete_room_messages_confirm_title=Suppression de tous les messages du salon
+delete_room_messages_confirm_alert=\u00cates-vous s\u00fbr de vouloir supprimer d\u00e9finitivement tous les messages de ce salon ?
+
+#Synoptic pages
+recent_chat_heading=Affichage des chats r\u00e9cents
+number_days=Nombre de jours dans le pass\u00e9
+number_messages=Nombre de messages
+number_chars=Nombre de caract\u00e8res par message
+update_text=Mise \u00e0 jour
+
+validation_error=Une erreur est survenue lors de l'envoi du formulaire. Voir ci-dessous.
+title_required=Titre obligatoire
+title_too_long=Le titre doit comporter moins de {0} caract\u00e8res
+desc_too_long=La description doit comporter moins de {0} de caract\u00e8res
+
+delete_room_messages=Nettoyer l'historique
+
+set_default=D\u00e9finir par d\u00e9faut
+set_as_default=D\u00e9finir "{0}" par d\u00e9faut
+
+viewingChatRoomText=Affichage des messages pour "{0}"
+
+back_to_room=Retour au salon
+
+channel_enable_override_description=Permettre aux participants du chat de modifier les propri\u00e9t\u00e9s d'affichage de leur propre fen\u00eatre
+
+neg_num_error=Les nombres n\u00e9gatifs sont interdits
