--- a/chat-tool/tool/src/bundle/chat_eu.properties
+++ b/chat-tool/tool/src/bundle/chat_eu.properties
@@ -1,117 +1,195 @@
-#Fri Nov 26 20:32:44 CET 2010
-hidet=Ezkutatu ordua
-custom.called=izen hau duena\:
-custom.which=Zein berriketa-gela bistaratzea nahi duzu?
-bar.onlydate=Eguna bakarrik
-add_room=Gehitu gela
-shownone=Ez erakutsi mezuen historikoa
-custom.howmany=Zenbat mezu bistaratuko dira?
-gen.from=Bidaltzailea\:
-lay_note=Berriketa mezu guztiak artxibatuko dira eta guneko edozein kidek irakurri ahal izango ditu
-control_panel=Kontrola
-hided=Ezkutatu eguna
-number_messages=Berriketa-mezuen kopurua
-add_channel_title=Erantsi gela
-control.clear=Garbitu
-back_to_room=itzuli gelara
-tool_options_title=Tresnaren aukerak
-lay_restricted_note_none=Bakarrik uneko saioko mezuak irakur ditzakete guneko kideek.
-monitor_panel=Zerrenda
-title_required=Titulua nahitaezkoa da
-custom.showall=Erakutsi mezu guztiak
-gen.alert=Alerta\:
-recent_chat_heading=Azken mezuak
-thereispro=Ezin dira mezuak ezarri beste erabiltzaile bat gunea editatzen ari delako. Itxi baimenak beste tresnetan jarraitu baino lehen.
-change_room=Aldatu gela
-past_x_messages=Azken {0} mezuak
-thischat=Berriketa hau ez dago erabilgarri.
-custom.use3=Erabili berriketa-gela berri bat
+#
+# Copyright (c) 2008 Sakai Foundation
+#
+# Licensed under the Educational Community License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.osedu.org/licenses/ECL-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+# 
+
+
+#Java code
+
+thischat = Txat hau ez dago erabilgarri.
+chatmesdel = Txateko mezua ezabatu duena hau da:
+chatroom = Txat-gela:
+days = Egunak
+forchat = Txat-gelaren izenaren arabera. Txat-gelaren izena
+hided = Ezkutatu eguna
+hidet = Ezkutatu ordua
+messages = Mezuak
+on = on
+permis = Baimenak
+setpermis = Ezarri baimenak guneko txat-gelan 
+perm_description= Ezarri baimenak Txaterako ''{1}'' gunean.
+showall = Mezu guztiak
+shownone = Ez erakutsi mezuen historikoa
+showd = Erakutsi eguna
+showlast = Erakutsi azkena(k)
+showpast = Aurrekoa(k)
+showt = Erakutsi ordua
+showtoday = Erakutsi gaurko mezuak
+thereispro = Ezin dira mezuak ezarri beste erabiltzaile bat gunea editatzen ari delako. Itxi baimenak beste tresnetan jarraitu baino lehen.
+therewaspro = Arazo bat izan da aurreko mezua bidaltzean.
+turnoff = Desgaitu mezu berriaren alerta
+turnon = Gaitu mezu berriaren alerta
+youdonot1 = Ez duzu baimenik txat hau ikusteko.
+youdonot2 = Ez duzu baimenik txat hau sortzeko.
+youdonot3 = Ez duzu baimenik txat honetara mezuak bidaltzeko.
+youdonot4 = Ez duzu baimenik txat honetako mezuak ezabatzeko.
+youent = Sartu zara+sartu duzu
+
+
+#General Vm
+
+gen.alert = Alerta:
+gen.cancel = Utzi
+gen.date = Eguna:
+gen.delete = Ezabatu
+gen.edit = Editatu
+gen.from = Bidaltzailea:
+gen.mess = Mezua:
+gen.save = Eguneratu aukerak
+
+
+#Control Vm
+
+control.clear = Garbitu
+control.post = Gehitu mezua
+
+
+#Customize Vm
+
+custom.chatroom = Txat-gela
+custom.cuschat = Txataren aukerak
+custom.days = egunak
+custom.howmany = Zenbat mezu bistaratuko dira?
+custom.mess = mezuak
+custom.showall = Erakutsi mezu guztiak
+custom.showlast = Erakutsi azkenak
+custom.showpast = Erakutsi azken egun hauetako mezuak:
+custom.use1 = Erabili guneko txat-gela nagusia
+custom.use2 = Erabili txat-gela hau:
+custom.use3 = Erabili txat-gela berri bat
+custom.which  = Zein txat-gela bistaratzea nahi duzu?
+custom.called = izen hau duena:
+custom.msgdisp = Bistaratu mezua
+
+
+#Delete Vm
+
+delete.delete = Ezabatzen ari da berriketako mezua
+delete.sure = Ziur zaude betiko ezabatu nahi duzula mezu hau?
+
+
+#Layaut Vm
+
+lay.note = Berriketako mezu guztiak artxibatu egiten dira eta parte-hartzaile bakoitzaren gunetik irakur daitezke.
+lay.user = Erabiltzaileak berriketan
+
+
+#List Vm
+
+list.del = Ezabatu mezu hau
+
+#Toolbar Vm (also used in Java)
+bar.onlytime = Ordua bakarrik
+bar.datetime = Eguna eta ordua
+bar.onlydate = Eguna bakarrik
+bar.nodatetime = Ez eguna, ez ordua ere
+bar.allmes = Mezu guztiak
 bar.view=Bistaratu
-custom.use2=Erabili berriketa-gela hau\:
-custom.use1=Erabili guneko berriketa-gela nagusia
-number_days=Igarotako egun-kopurua
-message_display=Mezua erakusteko
-delete_room_messages=Garbitu Historia
-custom.cuschat=Berriketaren aukerak
-bar.nodatetime=Ez eguna, ez ordua ere
-lay.note=Berriketako mezu guztiak artxibatu egiten dira eta parte-hartzaile bakoitzaren gunetik irakur daitezke.
-neitherDateOrTime=Ez eguna, ez ordua
-select_room_title=Aukeratu berriketa-gela bat
-room_list_title=Kudeatu gelak
-bar.onlytime=Ordua bakarrik
-days=Egunak
-delete.sure=Ziur zaude betiko ezabatu nahi duzula mezu hau?
-permis=Baimenak
-turnoff=Desgaitu mezu berriaren alerta
-youent=Sartu zara+sartu duzu
-on=on
-channel_creation_date=Sortze-data
-gen.edit=Editatu
-edit_channel_title=Editatu gela
-bar.allmes=Mezu guztiak
-messages=Mezuak
-synoptic_options_title=Laburpen aukerak
-lay_user=Erabiltzaileak berriketan
-bar.datetime=Eguna eta ordua
-desc_too_long=Azalpenak {0} karaktere baino gutxiago izan behar du
-lay_restricted_note_days=Bakarrik azken {0} egunetako mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
-update_text=Eguneratu
-message_owner=Jabea
-showlast=Erakutsi azkena(k)
-manage_tool=kudeatzeko tresna
-chatmesdel=Berriketako mezua ezabatu duena hau da\:
-allMessages=Mezu guztiak
-custom.msgdisp=Bistaratu mezua
 bar.show=Erakutsi
-channel_description=Azalpena
-forchat=Berriketa-gelaren izenaren arabera. Berriketa-gelaren izena
-number_chars=Berriketa-mezuaren karaktere-kopurua
-showt=Erakutsi ordua
-set_as_default=Ezarri ''{0}'' lehenetsi gisa
-perm_description=Ezarri baimenak {0}(e)rako ''{1}''lan-gunean 
-showpast=Aurrekoa(k)
-viewingChatRoomText=Orain, mezuak bistaratzen ari dira honetarako/hauentzat\: ''{0}''
-youdonot4=Ez duzu baimenik berriketa honetako mezuak ezabatzeko.
-showtoday=Erakutsi gaurko mezuak
-youdonot3=Ez duzu baimenik berriketa honetara mezuak bidaltzeko.
-youdonot2=Ez duzu baimenik berriketa hau sortzeko.
-youdonot1=Ez duzu baimenik berriketa hau ikusteko.
-timeAndDate=Eguna eta ordua ere
-custom.showlast=Erakutsi azkenak
-channel_enable_override_description=Baimena eman gunearen erabiltzaileei beren berriketa-leihoaren itxura aldatzeko
-setpermis=Ezarri baimenak guneko berriketa-gelan 
-showd=Erakutsi eguna
-delete.delete=Ezabatzen ari da berriketako mezua
-lay.user=Erabiltzaileak berriketan
-delete_room_confirm_title=Berriketa-gela bat ezabatzen ari da
-channel_title=Titulua
-bar.listnavselect=Aukeren zerrenda\: sakatu Alt eta gorako edo beherako geziak menuan korritzeko.
-control.post=Gehitu mezua
-past_x_days=Azken {0} egunak
-lay_restricted_note_messages=Bakarrik azken {0} mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
-timeOnly=Ordua bakarrik
-view=Bistaratu
-gen.delete=Ezabatu
-gen.date=Eguna\:
-custom.showpast=Erakutsi azken egun hauetako mezuak\:
-validation_error=Oker bat izan da inprimaki hau bidaltzean. Ikusi dagozkion mezuak behean.
-showall=Mezu guztiak
-custom.days=egunak
-delete_room_confirm_alert=Ziur zaude betiko ezabatu nahi duzula berriketa-gela hau?
-chatroom=Berriketa-gela\:
-gen.save=Eguneratu aukerak
-list.del=Ezabatu mezu hau
+bar.listnavselect = Aukeren zerrenda: sakatu Alt eta gorako edo beherako geziak menuan korritzeko.
+
+
+
+
+
+
+
+
+# ###############################
+# all the new strings
+
+past_x_days= Azken {0} egunak
+past_x_messages= Azken {0} mezuak
+
 default_new_channel_title=Kanal nagusia
-presence_panel=Presentzia
-title_too_long=Tituluak {0} karaktere baino gutxiago izan behar du
-gen.cancel=Utzi
-neg_num_error=Ez dira onartzen zenbaki negatiboak
-custom.mess=mezuak
+allMessages=Mezu guztiak
+timeOnly=Ordua bakarrik
+timeAndDate=Eguna eta ordua ere
 dateOnly=Eguna bakarrik
-perm_error=Ez dago nahikoa baimen honetarako\: {0}
+neitherDateOrTime=Ez eguna, ez ordua
+manage_tool=Kudeaketa tresna
+lay_note=Berriketa mezu guztiak artxibatuko dira eta guneko edozein kidek irakurri ahal izango ditu
+lay_restricted_note_days=Bakarrik azken {0} egunetako mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
+lay_restricted_note_messages= Bakarrik azken {0} mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
+lay_restricted_note_none=Bakarrik uneko saioko mezuak irakur ditzakete guneko kideek.
+lay_user=Erabiltzaileak solasgunean
+view=Bistaratu
+
+add_room=Gehitu gela
+change_room=Aldatu gela
 enter_the_chat_room=Sartu ''{0}'' gelan 
+channel_creation_date=Sortze-data
+channel_description=Azalpena
+channel_title=Titulua
+
+edit_channel_title=Editatu gela
+add_channel_title=Erantsi gela
+
+message_display=Mezua erakusteko
+
+perm_error=Ez dago nahikoa baimen honetarako: {0}
+
+message_owner=Jabea
+
+select_room_title=Aukeratu Txat-gela bat
+
+tool_options_title=Tresnaren aukerak
+synoptic_options_title=Laburpen aukerak
+room_list_title=Kudeatu gelak
+
+monitor_panel=Zerrenda
+presence_panel=Presentzia
+control_panel=Kontrola
+
+delete_room_confirm_title = Txat-gela bat ezabatzen ari da
+delete_room_confirm_alert = Ziur zaude betiko ezabatu nahi duzula Txat-gela hau?
+
+#Synoptic pages
+recent_chat_heading= Azken mezuak
+number_days=Igarotako egun-kopurua
+number_messages=Txat-mezuen kopurua
+number_chars=Txat-mezuaren karaktere-kopurua
+update_text=Eguneratu
+
+validation_error=Oker bat izan da inprimaki hau bidaltzean. Ikusi dagozkion mezuak behean.
+title_required=Titulua nahitaezkoa da
+title_too_long=Tituluak {0} karaktere baino gutxiago izan behar du
+desc_too_long=Azalpenak {0} karaktere baino gutxiago izan behar du
+
+delete_room_messages=Garbitu Historia
+
 set_default=Ezarri lehenetsi gisa
-therewaspro=Arazo bat izan da aurreko mezua bidaltzean.
-gen.mess=Mezua\:
-turnon=Gaitu mezu berriaren alerta
-custom.chatroom=Berriketa-gela
+set_as_default=Ezarri ''{0}'' lehenetsi gisa
+
+viewingChatRoomText=Orain, mezuak bistaratzen ari dira gela honetarako: ''{0}''
+
+back_to_room=itzuli gelara
+
+channel_enable_override_description=Baimena eman gunearen erabiltzaileei beren Txat-leihoaren itxura aldatzeko
+neg_num_error=Ez dira onartzen zenbaki negatiboak
+
+combox.viewfrom= Ikusi mezuak noiztik...
+uniqueid=ID bakarrik
+
+control.lab=Gehitu mezua
